app/assets/stylesheets/pages/_board.scss
#page-boards.page-show {
  .show-as-markdown-link {
    display: block;
    margin: 20px;
    text-align: right;
  }

  .category-title {
    font-size: 4.0rem;
  }

  .board-container {
    display: flex;
    padding: 20px;

    @media #{$BREAK-PHONE} {
      display: block;
    }
  }

  .category-container {
    justify-content: space-between;
    width: calc(100% / 3);
    margin-right: 30px;

    &:last-child {
      margin-right: 0;
    }

    @media #{$BREAK-PHONE} {
      width: 100%;
      margin-bottom: 50px;

      &:last-child {
        margin-bottom: 200px;
      }
    }
  }

  .card-container {
    margin-bottom: 5px;
    padding: 20px;
    cursor: move;

    &.over {
      border: 2px dashed #000;
    }
  }

  .card {
    font-family: $font-bold;
    font-size: 2.2rem;
    display: inline-block;
    width: 100%;
  }

  .add-card-link {
    font-size: 2rem;
    display: flex;
    align-items: center;
  }

  .add-card-link__label {
    font-family: $font-bold;
    line-height: 1.3;
    position: relative;
    margin-left: 20px;
    padding: 12px;
    color: #000;
    border: solid 1px #fff;
    border-radius: 10px;
    background: #fff;

    &::before {
      position: absolute;
      top: 50%; left: -10px;
      display: block;
      width: 0;
      height: 0;
      margin-top: -10px;
      content: '';
      border-width: 10px 10px 10px 0;
      border-style: solid;
      border-color: transparent #fff transparent transparent;
    }
  }
}

